feat(): 增加内存错误记录